# rest-backend

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  compose.yaml  nginx.conf  pyproject.toml  repomix-output.txt  requirements.txt
.github/workflows/: docker-publish.yaml
app/: config.py  database.py  dependencies.py  jwt.py  main.py  models.py  validators.py
app/api/v1/internal/: admin.py
app/api/v1/routers/: auth.py  items.py  posts.py  users.py
database/: compose.yaml
proxy/: Dockerfile  nginx.conf
